# qbfsort

./: CMakeLists.txt  README  README.md  qbfsortdir.sh
include/qbfsort/: ClauseSorter.hpp  Formula.hpp  LiteralSorter.hpp  QbfFormula.hpp  QuantifierSorter.hpp  Sorter.hpp
share/qbfsort/test/expected/: binaries.json  clauses_basic_binaries.qdimacs  clauses_basic_extended.qdimacs  clauses_countedBinariesLiteralSums_binaries.qdimacs  clauses_countedBinariesVariableMeans_binaries.qdimacs  clauses_countedBinariesVariableMeans_extended.qdimacs  clauses_countedBinariesVariableSums_binaries.qdimacs  clauses_frequencyLiteralMeans_binaries.qdimacs  clauses_frequencyLiteralSums_binaries.qdimacs  clauses_frequencyVariableMeans_binaries.qdimacs  clauses_random_binaries.qdimacs  clauses_random_comment.qdimacs  clauses_random_extended.qdimacs  clauses_random_short.qdimacs  clauses_weightedBinariesMeans_binaries.qdimacs  clauses_weightedBinariesMeans_extended.qdimacs  clauses_weightedBinariesSums_short.qdimacs  literals_basic_binaries.qdimacs  literals_countedBinariesLiteral_binaries.qdimacs  literals_countedBinariesLiteral_extended.qdimacs  literals_countedBinariesVariable_extended.qdimacs  literals_frequencyLiteral_extended.qdimacs  literals_frequencyLiteral_short.qdimacs  literals_frequencyVariable_binaries.qdimacs  literals_random_binaries.qdimacs  literals_random_comment.qdimacs  literals_random_extended.qdimacs  literals_random_short.qdimacs  literals_weightedBinaries_binaries.qdimacs  metric_basic_binaries.qdimacs  metric_basic_extended.qdimacs  metric_basic_short.qdimacs  metric_basicinverse_comment.qdimacs  metric_basicinverse_extended.qdimacs  metric_countedBinaries_binaries.qdimacs  metric_countedBinaries_extended.qdimacs  metric_countedBinariesinverse_binaries.qdimacs  metric_frequency_binaries.qdimacs  metric_frequency_short.qdimacs  metric_frequencyinverse_binaries.qdimacs  (+18 more)
src/: CMakeLists.txt  ClauseSorter.cpp  ClauseSorter.hpp  Formula.cpp  LiteralSorter.cpp  LiteralSorter.hpp  QbfFormula.cpp  QbfFormula.hpp  QuantifierSorter.cpp  QuantifierSorter.hpp  Sorter.cpp  main.cpp
test/expected/: basic.json  clause_frequency.cnf  clauses_basic_short.qdimacs  clauses_countedBinariesLiteralMeans_binaries.qdimacs  clauses_countedBinariesLiteralMeans_extended.qdimacs  clauses_countedBinariesLiteralSums_short.qdimacs  clauses_countedBinariesVariableMeans_short.qdimacs  clauses_frequencyLiteralSums_extended.qdimacs  clauses_frequencyLiteralSums_short.qdimacs  clauses_frequencyVariableSums_binaries.qdimacs  clauses_weightedBinariesSums_binaries.qdimacs  comment.json  countedBinaries.cnf  countedBinaries.json  empty.json  extended.json  frequency.json  literal_countedBinaries.cnf  literal_frequency.cnf  literals_basic_extended.qdimacs  literals_basic_short.qdimacs  literals_countedBinariesLiteral_short.qdimacs  literals_countedBinariesVariable_binaries.qdimacs  literals_frequencyLiteral_binaries.qdimacs  literals_frequencyVariable_short.qdimacs  literals_none_short.qdimacs  literals_weightedBinaries_extended.qdimacs  metric_basicinverse_binaries.qdimacs  metric_basicinverse_short.qdimacs  metric_countedBinariesinverse_extended.qdimacs  metric_frequency_extended.qdimacs  metric_frequencyinverse_comment.qdimacs  metric_frequencyinverse_extended.qdimacs  metric_weightedBinaries_extended.qdimacs  metric_weightedBinaries_short.qdimacs  metric_weightedBinariesinverse_extended.qdimacs  quantifier_basic.cnf  quantifier_countedBinaries.cnf  quantifiers_basic_extended.qdimacs  quantifiers_countedBinariesVariable_binaries.qdimacs  (+5 more)
